Added several partners

--- a/src/index.html
+++ b/src/index.html
@@ -374,16 +374,13 @@
             <img class="partners__item-img" src="img/westminster.jpg" alt="">
           </li>
           <li class="partners__item">
-            <img class="partners__item-img" src="https://picsum.photos/250/150" alt="">
+            <img class="partners__item-img" src="img/harvard.png" alt="">
           </li>
           <li class="partners__item">
-            <img class="partners__item-img" src="https://picsum.photos/235/100" alt="">
+            <img class="partners__item-img" src="img/stanford.png" alt="">
           </li>
           <li class="partners__item">
-            <img class="partners__item-img" src="https://picsum.photos/268/120" alt="">
-          </li>
-          <li class="partners__item">
-            <img class="partners__item-img" src="https://picsum.photos/290/140" alt="">
+            <img class="partners__item-img" src="img/mit.png" alt="">
           </li>
         </ul>
       </div>
