Added table to single post page

--- a/src/single-blog.html
+++ b/src/single-blog.html
@@ -45,15 +45,15 @@
               <a href="blog.html" class="breadcrumbs__item-link">Blog</a>
             </li>
             <li class="breadcrumbs__item">
-              <a class="breadcrumbs__item-link">Blog nomi</a>
+              <a class="breadcrumbs__item-link">Prices of company</a>
             </li>
           </ul>
         </nav>
 
-        <h1 class="blog-page__title">Title of post</h1>
+        <h1 class="blog-page__title">Prices of company</h1>
         <div class="blog-page__heading">
           <div class="blog-page__heading-texts">
-            <p class="blog-page__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis neque consequatur quod tempora aliquid eius error vitae quis ullam modi?</p>
+            <p class="blog-page__description">This article will demonstrate the price of our services</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti provident delectus rerum qui voluptatum!</p>
           </div>
           <div class="blog-page__btns">
@@ -70,7 +70,7 @@
             <h2 class="related-blogs__title">Related Articles</h2>
             <ul class="related-blogs__list">
               <li class="related-blogs__item">
-                <h3 class="related-blogs__item-title">Bir nima article</h3>
+                <h3 class="related-blogs__item-title">Some kind of article</h3>
                 <time class="related-blogs__item-date">1 January 2020</time>
               </li>
               <li class="related-blogs__item">
@@ -78,7 +78,7 @@
                 <time class="related-blogs__item-date">1 January 2020</time>
               </li>
               <li class="related-blogs__item">
-                <h3 class="related-blogs__item-title">Bir nima article</h3>
+                <h3 class="related-blogs__item-title">Some kind of article</h3>
                 <time class="related-blogs__item-date">1 January 2020</time>
               </li>
             </ul>
@@ -89,7 +89,33 @@
             </div>
           </section>
           <div class="blog-page__content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, tempore nulla mollitia porro dolore consequuntur minima perferendis iure ut magnam quia similique neque facilis officiis. Harum ipsa laborum sunt delectus, quo itaque maxime perferendis iusto vero corrupti doloremque dicta commodi repudiandae quae eveniet exercitationem dolorem inventore, eum facere dolorum! Veritatis animi similique dicta consectetur numquam, natus libero placeat eveniet tenetur ut unde deserunt quis praesentium eos beatae blanditiis nulla deleniti! Cum nobis, nesciunt recusandae nisi magni consequuntur nostrum? Odio doloremque culpa at dolores, enim, aperiam veniam velit nihil eaque commodi voluptate iusto illum natus et? Doloribus enim adipisci sed harum quasi mollitia amet odit explicabo eveniet illo perspiciatis suscipit, inventore omnis nesciunt molestiae totam itaque? Aliquid illo minima id placeat eius cumque eligendi explicabo sit fugiat veniam voluptatibus autem perspiciatis deleniti, molestias natus! Placeat esse sit aliquam, recusandae totam ea quasi dignissimos cupiditate, iusto animi iure sint optio obcaecati aspernatur, modi ut dolor? Illo nesciunt laborum officia at, eaque delectus, beatae culpa quia provident ipsa, veritatis laudantium deleniti harum. Voluptates aliquid molestias id modi, aliquam quo nihil eligendi nisi dolorem consectetur rem veniam facilis dignissimos nesciunt? Necessitatibus harum, explicabo numquam a nesciunt voluptates nobis animi. Reiciendis est dolores mollitia repellat voluptates cumque doloribus tenetur nulla ducimus, aperiam magnam enim obcaecati harum aliquid veritatis tempore? Cupiditate rem ut distinctio aliquam ratione? Optio, officiis eius vitae temporibus porro, ullam quae cum quia numquam nobis magnam, molestias earum dolorem culpa beatae veritatis laboriosam ipsum suscipit modi eveniet deleniti blanditiis voluptates! Voluptate debitis asperiores quam, sequi molestias atque saepe corporis quia, quo nam nulla cumque nihil sed dolorum tempora doloremque id amet? Illum id vitae nostrum nulla tenetur quam itaque. Maxime aut repudiandae aliquam vel tempore quod ea exercitationem? In suscipit reprehenderit dolores culpa laboriosam vero numquam officia illum eius doloremque quis, enim est odit. Fugit totam nulla nihil assumenda recusandae soluta inventore aspernatur libero accusamus pariatur! Unde sint corporis eius, ab repellat nihil sapiente quam officiis at? Nesciunt deleniti error optio dicta iusto facere, fuga quibusdam consequuntur quisquam, odit, dolorem nam. Maiores iusto culpa voluptates dolorum molestias beatae consequuntur! Quam cumque dignissimos earum, exercitationem numquam quia id incidunt, laboriosam iusto perferendis magni accusamus voluptas, voluptates omnis? Reiciendis, magni suscipit. Sint repudiandae nam voluptatem accusamus quibusdam incidunt adipisci mollitia laudantium. Voluptates, quas eos? Ducimus debitis quo quasi molestias veniam suscipit molestiae! Iusto alias veniam repellendus modi iure unde hic, ratione, incidunt repellat et ullam.
+            In this table you can see our prices to services
+            <table class="table">
+              <thead>
+                <tr>
+                  <th class="table__id">Id</th>
+                  <th>Name</th>
+                  <th>Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>#1</td>
+                  <td>Bronze</td>
+                  <td>$12.99</td>
+                </tr>
+                <tr>
+                  <td>#2</td>
+                  <td>Silver</td>
+                  <td>$40.99</td>
+                </tr>
+                <tr>
+                  <td>#3</td>
+                  <td>Gold</td>
+                  <td>$99.99</td>
+                </tr>
+              </tbody>
+            </table>
 
             <div class="blog-page__author">
               <img class="blog-page__author-img" width="64" height="64" src="https://picsum.photos/64/64" alt="">
