Added readme file

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             </a>
           </li>
           <li class="portfolio__item"><a href="single-portfolio.html" class="portfolio__item-link">
-              <img class="portfolio__item-img" src="img/portfolio-6`.jpg" width="385" alt="">
+              <img class="portfolio__item-img" src="img/portfolio-6.jpg" width="385" alt="">
             </a>
           </li>
         </ul>
