Changed validation of the form

--- a/contact-us.html
+++ b/contact-us.html
@@ -82,11 +82,11 @@
 
         <form action="#" class="contact__form">
           <label for="name" class="contact__label">Name</label>
-          <input required="" class="contact__field" id="name" placeholder="Ibrohim" type="text">
+          <input required class="contact__field" id="name" placeholder="Ibrohim" type="text">
           <label for="mail" class="contact__label">E-mail</label>
-          <input required="" class="contact__field" id="mail" placeholder="ibrohim@gmail.com" type="text">
-          <textarea required="" class="contact__field contact__field--textarea" name="message" id="message"></textarea>
-          <select required="" name="type" id="service" class="contact__field contact__field--select">
+          <input required class="contact__field" id="mail" placeholder="ibrohim@gmail.com" type="mail">
+          <textarea required class="contact__field contact__field--textarea" name="message" id="message"></textarea>
+          <select required name="type" id="service" class="contact__field contact__field--select">
             <option disabled="" selected="" value="0">Any</option>
             <option value="1">Telegram bot</option>
             <option value="2">E-Commerce</option>
